prevent horizontal scrollbar from appearing, and add horizontal padding

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,6 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow-x: clip;
 }
 
 header {
@@ -40,4 +41,8 @@ header {
       }
     }
   }
+}
+
+main {
+  padding: 0 1em;
 }
