--- a/stylesheet/uc.css
+++ b/stylesheet/uc.css
@@ -1,6 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow-x: clip;
 }
 
 header {
@@ -35,6 +36,10 @@ header nav ul li {
 }
 header nav ul li a {
   padding: 1em;
+}
+
+main {
+  padding: 0 1em;
 }
 
 div#uc {
